...
    <string name="more_info">More information can be found on:</string>
    <string name="about_third_party_libs">The app uses <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart from Philipp Jahoda</a> (Apache 2 License).</string>
    <string name="privacy_friendly">This application belongs to the Privacy Friendly Apps group developed by the research group SECUSO. Sourcecode licensed under GPLv3. Images copyright SECUSO and Google Inc.</string>
    <string name="github" translatable="false"><a href="https://github.com/SecUSo/privacy-friendly-activity-tracker">Github-Repo</a></string>
    <string name="url"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <!-- ReportFragment -->
    <string name="month">Mois</string>
    <string name="week">Semaine</string>
    <string name="day">Jour</string>
    <string name="steps">Steps</string>
    <string name="calories">calories</string>
    <string name="activity_summary_subtitle">Summary of activities</string>
    <string name="activity_chart_summary_subtitle">Detailed summary of your activities</string>
    <string name="summary_card_kilocalories">kcal</string>
    <string name="summary_card_calories">cal</string>
...
    <string name="help_permission_wake_heading">Permission: Wake Lock</string>
    <string name="help_permission_wake_description">is used to keep the CPU awake to count the steps in background.</string>
    <string name="help_permission_gps_heading">Permission: Precise location</string>
    <string name="help_permission_gps_description">is used to show your current walking speed on home screen. If the permission is not granted the walking speed will not be showed - there are no other implications.</string>
    <!-- Preferences -->
    <!-- general settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_group_title_personal_settings">Personalization</string>
    <string name="pref_step_counter_enabled" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.step_counter_enabled</string>
    <string name="pref_title_step_counter_enabled">Permanent step counter</string>
    <string name="pref_summary_step_counter_enabled">The app counts your steps in background.</string>
    <string name="pref_use_wake_lock" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.use_wake_lock</string>
    <string name="pref_title_use_wake_lock">Keep processor awake</string>
    <string name="pref_summary_use_wake_lock">On some devices the processor falls asleep and prevents counting steps. Enable this to keep the processor awake while counting steps - this may drain your battery!</string>
    <string name="pref_use_wake_lock_during_training" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.use_wake_lock_during_training</string>
...
    </string-array>
    <string name="pref_accelerometer_steps_threshold" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.accelerometer_step_threshold</string>
    <string name="pref_title_accelerometer_steps_threshold">Steps before counting starts</string>
    <string name="pref_default_accelerometer_steps_threshold" translatable="false">10</string>
    <!-- /general settings -->
    <!-- notification settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_group_title_permanent_notification">Permanent Notification</string>
    <string name="pref_group_title_motivation_alert">Motivation Alert</string>
    <string name="pref_notification_permanent_show_steps" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_steps</string>
    <string name="pref_title_notification_permanent_show_steps">Show number of steps walked today</string>
    <string name="pref_notification_permanent_show_distance" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_distance</string>
    <string name="pref_title_notification_permanent_show_distance">Show distance walked today</string>
...
    <string-array name="pref_values_notification_motivation_alert_criterion" translatable="false">
        <item>90</item>
        <item>70</item>
        <item>50</item>
    </string-array>
    <!-- /notification settings -->
    <string name="pref_header_walking_modes">Walking modes</string>
    <string name="pref_widget_data_set" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.widget_data_set_</string>
    <string name="pref_distance_measurement_start_timestamp" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.distance_measurement_start_timestamp</string>
    <string name="pref_hw_steps_on_last_save" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.hw_steps_on_last_save</string>
    <string name="pref_hw_background_counter_frequency" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.hw_background_counter_frequency</string>
    <string name="pref_which_step_hardware" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.which_step_hardware</string>
    <!-- /Preferences -->

    <!-- Will be removed on next update -->
    <string name="pref_daily_step_goal" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.daily_step_goal</string>
    <string name="notification_text_steps">%1$d of %2$d steps walked today.</string>
...
    <string name="slide_2_desc">To improve the calculation of the calories you have burned by walking please customize your personal settings.</string>
    <string name="slide_2_desc_two">You can switch your current walking modes using the context menu in the toolbar.</string>
    <string name="slide_3_title">Notifications</string>
    <string name="slide_4_title">Widget</string>
    <string name="slide_4_desc">Add a widget to your homescreen to stay up to date about your walked steps.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <!-- /welcome dialog -->

    <!-- motivation alert -->
    <string-array name="pref_default_notification_motivation_alert_messages">
        <item>Come on, it\'s time to walk!</item>
    </string-array>
...
