...
        <item android:id="@+id/menu_training" android:title="@string/action_training" android:icon="@drawable/ic_directions_run"
            android:orderInCategory="100" app:showAsAction="never" />
        <item android:id="@+id/menu_distance_measurement" android:title="@string/action_distance_measurement" android:icon="@drawable/ic_swap_horiz_black_24dp"
            android:orderInCategory="100" app:showAsAction="never" />
    </group>
    <group android:id="@+id/menu_group_settings" android:checkableBehavior="all">
        <item android:id="@+id/menu_settings" android:title="@string/action_settings" android:icon="@drawable/ic_settings"
            android:orderInCategory="100" app:showAsAction="never" />
        <item android:id="@+id/menu_help" android:title="@string/action_help" android:icon="@drawable/ic_action_help"
            android:orderInCategory="100" app:showAsAction="never" />
        <item android:id="@+id/menu_about" android:title="@string/action_about" android:icon="@drawable/ic_action_about"
            android:orderInCategory="100" app:showAsAction="never" />
    </group>
...
